--- a/book-app/package.json
+++ b/book-app/package.json
@@ -15,11 +15,15 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "axios": "^1.7.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.1",
     "framer-motion": "^11.3.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
